examples/error/missing_return.rx
function string cnst() {
  for (e : []) 
    return "str";
}

function void main() {
  cnst();
}